[project]
name = "meetflow-openenv"
version = "0.1.0"
description = "MeetFlow OpenEnv Environment"
authors = [
    { name = "Ashwath Nagarajan" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"