[project]
name = "meetflow-phase3"
version = "3.0.0"
description = "Phase 3 ready OpenEnv-style MeetFlow environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "openai>=1.55.3",
  "httpx>=0.27.2,<0.28",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
